Вывод объекта, поиск по метро v0.4.2

--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -33,7 +33,7 @@
                             <span class="span-tel">(495) 58-58-231</span>
                         </li>
                         <li>
-                            <a href="#" class="a-nav-btn">ЗАДАТЬ ВОПРОС</a>
+                            <a href="{% url 'contact' %}" class="a-nav-btn">ЗАДАТЬ ВОПРОС</a>
                         </li>
                     </ul>
                 </div>
@@ -106,7 +106,7 @@
                 <span class="span-tel">(495) 58-58-231</span>
             </li>
             <li>
-                <a href="#" class="a-nav-btn">ЗАДАТЬ ВОПРОС</a>
+                <a href="{% url 'contact' %}" class="a-nav-btn">ЗАДАТЬ ВОПРОС</a>
             </li>
         </ul>
         </div>
