--- a/templates/contactform/cont.html
+++ b/templates/contactform/cont.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div id="con_form">
-    <h1 class="cont">Задать вопрос</h1>
+    <h1 class="cont">Контактная форма</h1>
     <p>
         Если у Вас есть вопросы - заполните эту форму и отправьте нам. Мы свяжемся с вами в ближайшее время.
     </p>
