--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -17,7 +17,9 @@ h1, h2, h3, h4, h5{
 }
 
 /* Контент */
-
+.clearfix{
+    clear: both;
+}
 .page{
     width: 1000px;
     margin: auto;
@@ -190,13 +192,45 @@ form.form_s_3s {
 .form_s_3s .form-group {
     float: left;
 }
-
+.obj-cont{
+    float: left;
+    width: 610px;
+    padding: 0 5px;
+    border-right: 1px solid #000;
+}
+.btn-obj-singl{
+    margin-bottom: 5px;
+    width: 250px;
+    height: 50px;
+    text-align: center;
+    background-color: #DB2C27;
+    padding: 15px 50px;
+}
+.btn-obj-singl:hover{
+    background-color: rgb(224, 65, 61) !important;
+}
+.obj-right{
+    width: 270px;
+    padding: 20px;
+    float: right;
+}
+.cont-btn{
+    background-color: #DB2C27;
+    color: #fff;
+    font-size: 16px;
+    font-weight: bold;
+}
+.btn-obj-singl>a:hover{
+    text-decoration: none !important;
+    color: #fff !important;
+}
 .table-obj{
     width: 600px !important;
 }
 .td-op{
     width: 30%;
 }
+
 /*Футер*/
 footer{
     width: 100%;
