--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -209,6 +209,17 @@ form.form_s_3s {
 .btn-obj-singl:hover{
     background-color: rgb(224, 65, 61) !important;
 }
+.btn-obj{
+    margin-bottom: 5px;
+    width: 600px;
+    height: 50px;
+    text-align: center;
+    background-color: #DB2C27;
+    padding: 15px 50px;
+}
+.btn-obj:hover{
+    background-color: rgb(224, 65, 61) !important;
+}
 .img-obj{
     width: 250px;
     margin-left: 15px;
@@ -231,7 +242,7 @@ form.form_s_3s {
     font-size: 16px;
     font-weight: bold;
 }
-.btn-obj-singl>a:hover{
+.btn-obj-singl>a:hover, .btn-obj>a:hover{
     text-decoration: none !important;
     color: #fff !important;
 }
