--- a/myclient/static/css/style.css
+++ b/myclient/static/css/style.css
@@ -197,7 +197,7 @@ form.form_s_3s {
     position: absolute;
     margin-left: -15px;
 }
-#id_okrug {
+#id_okrug, #id_price {
     display: flex;
     flex-direction: column;
     height: 110px;
@@ -207,12 +207,6 @@ form.form_s_3s {
     font-size: 16px;
     margin-top: -2px !important;
     padding-left: 2px;
-}
-#id_price {
-    display: flex;
-    flex-direction: column;
-    height: 110px;
-    flex-wrap: wrap;
 }
 .control-label{
     font-size: 18px;
