--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -57,7 +57,7 @@
 								<a href="{% url 'home' %}" class="a-nav">ГЛАВНАЯ</a>
 							</li>
 							<li>
-								<a href="" class="a-nav">НОВЫЕ</a>
+								<a href="{% url 'new_obj' %}" class="a-nav">НОВЫЕ</a>
 							</li>
 							<li>
 								<a href="" class="a-nav">ОБЪЕКТЫ В ПЕРЕХОДАХ МЕТРО</a>
