--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -22,32 +22,37 @@
 
 {% block content %}
 <form class="form_s_3s" name="contact" method="post" action="">
-    {% csrf_token %} 
+    {% csrf_token %}
     {% bootstrap_form form %}
     <button type="submit" class="btn btn-md btn-search-obj"><span class="search-obj">ИСКАТЬ</span></button>
 </form>
-<div>
+<div class="home-obj">
 
   {% if myobj %}
     {% for obj in myobj %}
 
         <div class="myobj">
             <p>
-                {% for img in obj.stancmetro_set.all %}
-                <img src="{{MEDIA_URL}}{{ img.name }}" width="200" height="200" alt="Аренда помещений">
+                {% for img in imgs %}
+                <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="200" height="200" alt="Аренда помещений"></a>
                 {% endfor %}
             </p>
             <p>
-                {{obj.price}}
+                {{obj.price}} Р/месяц </br>
+                {{obj.adres}}</br>
+                {{obj.station_one}} {% if obj.station_two %} {{obj.station_two2}} {% endif %}   </br>
+                150 метров от метро </br>
+                {% for okrug in obj.okrug.all %}
+                    {{okrug.options}},
+                {% endfor %}</br>
             </p>
-            <p>
-                {{obj.adres}}
-            </p>
-
         </div>
     {% endfor %}
   {% else %}
     <h1>По вашему запросу нет результатов</h1>
   {% endif %}
+</div>
+<div class="clearfix">
+
 </div>
 {% endblock %}
