--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -35,7 +35,7 @@
       <div class="myobj">
           <p>
               {% for img in imgs %}
-              <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="200" height="200" alt="Аренда помещений"></a>
+              <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="100%" height="100%" alt="Аренда помещений"></a>
               {% endfor %}
           </p>
           <p>
