--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -17,24 +17,45 @@
 </div>
 {% endblock %}
 {% block content-title %}
-
-{% endblock %}
-
-{% block content %}
 <form class="form_s_3s" name="contact" method="post" action="">
     {% csrf_token %}
     {% bootstrap_form form %}
+    <div class="clearfix">
+    </div>
     <button type="submit" class="btn btn-md btn-search-obj"><span class="search-obj">ИСКАТЬ</span></button>
 </form>
+{% endblock %}
+
+{% block content %}
+
 <div class="home-obj">
-
-  {% if myobj %}
+  {% if myobjs %}
+  {% for objs in myobjs %}
+      {% for obj in objs %}
+      <div class="myobj">
+          <p>
+              {% for img in imgs %}
+              <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="200" height="200" alt="Аренда помещений"></a>
+              {% endfor %}
+          </p>
+          <p>
+              {{obj.price}} Р/месяц </br>
+              {{obj.adres}}</br>
+              {{obj.station_one}} {% if obj.station_two %} {{obj.station_two2}} {% endif %}   </br>
+              150 метров от метро </br>
+              {% for okrug in obj.okrug.all %}
+                  {{okrug.options}},
+              {% endfor %}</br>
+          </p>
+      </div>
+      {% endfor %}
+  {% endfor %}
+  {% elif myobj %}
     {% for obj in myobj %}
-
-        <div class="myobj">
-            <p>
+        <div class="myobj-h">
+            <p class="p-img">
                 {% for img in imgs %}
-                <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="200" height="200" alt="Аренда помещений"></a>
+                <a href="{% url 'obj_single' pk=obj.id %}"><img src="{{MEDIA_URL}}{{ img.image.url }}" width="100%" height="100%" alt="Аренда помещений"></a>
                 {% endfor %}
             </p>
             <p>
@@ -55,4 +76,5 @@
 <div class="clearfix">
 
 </div>
+
 {% endblock %}
