--- a/templates/base-site.html
+++ b/templates/base-site.html
@@ -44,7 +44,7 @@
 					<div class="navbar-header">
 						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
+            <span class="glyphicon glyphicon-list"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
@@ -96,7 +96,7 @@
 	</div>
     <footer>
         <div class="footer">
-        <a href="/"><img src="{% static 'images/logo.jpg' %}"></a>
+        <a href="/" class='a-footer'><img src="{% static 'images/logo.jpg' %}"></a>
 
         <ul class="nav navbar-nav navbar-right nav-footer">
             <li class="li-footer-day">
