--- a/templates/site/home.html
+++ b/templates/site/home.html
@@ -15,6 +15,9 @@
         </form>
     </div>
 </div>
+<div class="clearfix">
+
+</div>
 {% endblock %}
 {% block content-title %}
 <form class="form_s_3s" name="contact" method="post" action="">
